# Fuzzyball-OBPI-ML-MODEL-

./: .env.example  .gitattributes  .gitignore  FINAL_PROJECT_REPORT.md  LICENSE  PERSON_1_ROADMAP.md  PERSON_2_ROADMAP.md  PERSON_3_ROADMAP.md  PROJECT_ROADMAP.md  README.md  WEEKLY_COMPLETION_SUMMARY.json  WORK_BREAKDOWN.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js
.github/workflows/: ci.yml
api/: __init__.py  dependencies.py  main.py  models.py
api/routes/: __init__.py  analyze.py  compare.py  health.py  leaderboard.py  players.py  statsbomb.py
api/services/: __init__.py  cache_service.py  pipeline_service.py  shap_service.py  statsbomb_service.py
config/: default.yaml
dashboard/: .gitignore
data/cache/: statsbomb_360_match_ids.json
data/processed/: player_aggregate_metrics.parquet  player_obpi_scores.parquet  training_prepared.parquet
data/sample/: sample_metrics.csv  synthetic_metrics.csv
docker/: Dockerfile
fastapi-statsbomb/: README.md  requirements.txt
fastapi-statsbomb/app/: main.py  statsbomb_service.py
notebooks/: 01_metric_debugging.ipynb
results/: ABLATION_BENCHMARK.md  EXTERNAL_VALIDATION.md  FIFA_EXTERNAL_VALIDATION.md  FRAME_CAP_SENSITIVITY.md  FUZZY_ENGINE_STATUS.md  MATCH_VS_AGGREGATE_VALIDATION.md  RESEARCH_VALIDATION.md  SOFASCORE_VALIDATION.md  VALIDATION_REPORT.md  ablation_results.csv  benchmark_correlations.csv  cv_results.json  expert_ratings_template.csv  explainability_report.json  external_validation.json  fifa_external_validation.json  frame_cap_sensitivity.csv  frame_cap_sensitivity.json  match_vs_aggregate_validation.json  metric_weights.json  pca_benchmark.json  permutation_importance.csv  research_validation_audit.json  sample_obpi_scores.csv  shap_values.csv  sofascore_validation.json  training_preparation_report.json  week5_membership_report.json  week5_scored_metrics.csv
scripts/: compare_match_aggregate_validation.py  download_statsbomb_mens_open_data.py  generate_validation_figures.py  prepare_training_data.py  preprocess_statsbomb_open_data.py  process_interim_metrics.py  run_explainability.py  run_external_validation.py  run_fifa_ratings_validation.py  run_frame_cap_sensitivity.py  run_fuzzy_processing.py  run_research_validation_audit.py  run_sofascore_validation.py  test_api_cli.py  train_validation_models.py  week5_demo_scoring.py
src/app/: globals.css  layout.js  page.js
src/obpi/: __init__.py  pipeline.py
tests/: __init__.py  conftest.py  test_ablation_correlation.py  test_api.py  test_coverage_gaps.py  test_data_loader.py  test_engine_validation.py  test_explainability.py  test_fifa_ratings_validation.py  test_fuzzy.py  test_fuzzy_processing.py  test_metric_processing.py  test_metrics_movement.py  test_metrics_receiving.py  test_metrics_spatial_temporal.py  test_ml.py  test_model_training.py  test_pipeline.py  test_raw_preprocessor.py  test_research_validation.py  test_training_preparation.py  test_validation.py
(+106 files in other folders)
